Adding YAPF to build, fixing formatting (#12)
Adding YAPF to the build to enforce formatting style.
Fixing all source code to have style-compliant formatting.
Changing all tabs to spaces.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python:
   - "2.7"
 install:
-    - pip install -r test_requirements.txt
+    - pip install -r dev_requirements.txt
     - pip install coveralls
 script:
     ./build
