--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: python
 python:
   - "2.7"
 install:
+    - pip install -r requirements.txt
     - pip install -r dev_requirements.txt
     - pip install coveralls
 script:
