Adding a basic command-line interface (#20)
* Adding a basic command-line interface

Adds a basic command line interface for GreenPiThumb. At this point, all it
does is read each sensor and print out the value.

Since we're not running on real hardware yet, adds a fake_sensors module that
generates random sensor values.

--- a/build
+++ b/build
@@ -1,7 +1,7 @@
 # Run unit tests and calculate code coverage.
 coverage run \
   --source greenpithumb \
-  --omit "greenpithumb/dht11/*" \
+  --omit "greenpithumb/dht11/*,greenpithumb/fake_sensors.py" \
   -m unittest discover &&
 # Check that source has correct formatting.
 yapf --diff --recursive --style google ./ --exclude="./greenpithumb/dht11/*"
