Removing reference to fake_sensors.py (#78)
This file was deleted in 270b1a832073cf9b2acd51fe3e10a9c9313a18e2

--- a/build
+++ b/build
@@ -8,7 +8,7 @@ set -e
 # Run unit tests and calculate code coverage.
 coverage run \
   --source greenpithumb \
-  --omit "greenpithumb/dht11/*,greenpithumb/fake_sensors.py" \
+  --omit "greenpithumb/dht11/*" \
   -m unittest discover
 
 # Run static analysis for Python bugs/cruft.
