Switching from PlantFriends soil sensor to SparkFun (#146)
* Switching from PlantFriends soil sensor to SparkFun

Changes code to use the SparkFun soil moisture sensor instead of the
PlantFriends soil moisture sensor. The SparkFun cannot reverse its polarity
like the PlantFriends, so it is constantly connected to ground and only needs
one GPIO pin to flip up and down for readings.

Updates the code and the Fritzing diagram.

* Changing soil moisture GPIO pin to GPIO16

* Fixing pins -> pin

--- a/greenpithumb/wiring_config.ini.example
+++ b/greenpithumb/wiring_config.ini.example
@@ -3,8 +3,7 @@
 [gpio_pins]
 pump: 26
 dht11: 21
-soil_moisture_1: 12
-soil_moisture_2: 16
+soil_moisture: 16
 mcp3008_clk: 18
 mcp3008_dout: 23
 mcp3008_din: 24
